# MLOps_training

./: Dockerfile.api  Dockerfile.app  docker-compose.yml  main.py  pyproject.toml
data/processed/: churn-processed.csv
models/: best_model.pkl
src/: api.py  app.py  data_preprocessing.py  model.py
